<resources>

    <!-- we love a commit lol -->

    <!-- Home Strings-->
    <string name="app_name">Pill Reminder App</string>
    <string name="home_title1">Pill Reminder App</string>
    <string name="home_button1">View Medications</string>
    <string name="home_button2">View Calendar</string>
    <string name="home_button3">Add Medication</string>
    <string name="home_medsText">Meds for today:</string>
    <string name="title_activity_settings">SettingsActivity</string>


    <!-- lololol -->
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="notification">Notification</string>
    <string name="AddMedication">Add Medication:</string>
    <string name="medicationNameField">Medication Name</string>
    <string name="SetReminderTime">Set Reminder Time</string>

</resources>