<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/home_button2"
        style="@android:style/Widget.Material.Button"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorAccent"
        android:text="@string/home_button2"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/home_button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/home_title1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/darker_gray"
        android:textSize="36sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/home_settingsButton"
        app:layout_constraintEnd_toStartOf="@+id/home_settingsButton"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/home_settingsButton"
        app:layout_constraintVertical_bias="0.083" />

    <Button
        android:id="@+id/home_button1"
        style="@android:style/Widget.Material.Button"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorAccent"
        android:text="@string/home_button1"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/home_settingsButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="15dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_settingsIcon" />

</androidx.constraintlayout.widget.ConstraintLayout>